[FIX] Deleted accessibility jumplinks positioning CSS that was moved to inline in header.tpl
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@14263 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/tikinewt.css
+++ b/styles/tikinewt.css
@@ -173,13 +173,6 @@ ul.jumplinks {
 	list-style-type : none;
 }
 
-ul.jumplinks, .jumplinks {
-	position: absolute;
-	top: -9000px;
-	left: -9000px;
-	z-index: 9;
-}
-
 ul.jumplinks a:focus, ul.jumplinks a:active {
 	position: absolute;
 	top: 9010px;
